--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT=5000
-MONGODB_URI=mongodb://127.0.0.1:27017/onclick
+MONGODB_URI=mongodb+srv://jaytejani8y:jaytejani2001@onclick.gk53vrl.mongodb.net/?retryWrites=true&w=majority&appName=onclick
+
 API_KEY=AIzaSyBLaoaLywmrKp8CkLIWHyqN0jBn6PPFSns
